# MCP-First-Multi-Agent-Copilot-Framework-with-Hybrid-RAG-Streaming

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP_SUCCESS.md  START_FRONTEND.txt  docker-compose.yml  port-forward.ps1
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: agents.py  chat.py  eval.py  health.py  memory.py  plugins.py  projects.py  tools.py
backend/app/core/: agents.py  config.py  llm_router.py  mcp_protocol.py  plugin_manager.py  rag_memory.py  workflow.py
backend/app/services/: code_indexer.py
backend/app/tools/: __init__.py  calculator.py  code_search.py  file_read.py
backend/plugins/sample_plugin/: manifest.json  word_count.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  test.html  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: ChatPage.tsx  HomePage.tsx  ProjectsPage.tsx  ToolsPage.tsx
