[tool.poetry]
name = "copilot-framework"
version = "0.1.0"
description = "Open-source modular LLM copilot framework with MCP protocol and pluggable RAG memory"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
redis = "^5.0.1"
weaviate-client = "^4.4.0"
langchain = "^0.1.4"
langchain-openai = "^0.0.5"
langchain-anthropic = "^0.1.1"
tiktoken = "^0.5.2"
openai = "^1.10.0"
anthropic = "^0.30.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiofiles = "^23.2.1"
websockets = "^12.0"
httpx = "^0.26.0"
tenacity = "^8.2.3"
pyyaml = "^6.0.1"
loguru = "^0.7.2"
jsonschema = "^4.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
ruff = "^0.1.14"
black = "^24.1.0"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
